Bug 823310 - Only report strict warnings when JSOPTION_STRICT is set. r=njn,jorendorff