js/src/frontend/BytecodeEmitter.cpp
@@ -1718,7 +1718,7 @@ BytecodeEmitter::reportStrictWarning(ParseNode *pn, unsigned errorNumber, ...)
 {
     va_list args;
     va_start(args, errorNumber);
-    bool result = tokenStream()->reportStrictWarningErrorNumberVA(pn, sc->strict, errorNumber, args);
+    bool result = tokenStream()->reportStrictWarningErrorNumberVA(pn, errorNumber, args);
     va_end(args);
     return result;
 }
