js/src/frontend/TokenStream.h
@@ -541,8 +541,7 @@ class TokenStream
                                     va_list args);
     bool reportStrictModeErrorNumberVA(ParseNode *pn, bool strictMode, unsigned errorNumber,
                                        va_list args);
-    bool reportStrictWarningErrorNumberVA(ParseNode *pn, bool strictMode, unsigned errorNumber,
-                                          va_list args);
+    bool reportStrictWarningErrorNumberVA(ParseNode *pn, unsigned errorNumber, va_list args);
 
   private:
     // These are private because they should only be called by the tokenizer
